2004-05-21  Masatake YAMATO  <jet@gyve.org>

	* progmodes/etags.el (tags-apropos, list-tags): Require
	apropos.

2004-05-20  Luc Teirlinck  <teirllm@auburn.edu>

	* locate.el (locate-prompt-for-command): Shorten first line of
	docstring.
	(locate-mode): Expand docstring and include keymap summary.

	* files.el (find-file-noselect-1): Limit the scope of the
	`inhibit-read-only' binding.  Make sure that `inhibit-read-only'
	is, by default, nil during the execution of
	`find-file-not-found-functions' and `find-file-hook'.

2004-05-20  Michael Mauger  <mmaug@yahoo.com>

	* facemenu.el (facemenu-color-name-equal): New function.
	(list-colors-display): Use it to compare colors instead of
	facemenu-color-equal.

2004-05-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* compare-w.el (compare-windows-face): Use min-colors instead of
	checking for tty or pc types.

2004-05-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (do-auto-fill): Remove unused vars `bol' and `opoint'.
	(completion-setup-function): Use with-current-buffer.
	Properly save excursion.  Simplify.
	Don't assume there is necessarily a `mouse-face' property somewhere.

	* progmodes/gud.el (gud-reset): Use unless & with-current-buffer.

	* progmodes/gdb-ui.el (gdb-reset): Use unless.  Fix regexp.

	* emacs-lisp/bytecomp.el (byte-compile-log): Use backquotes.
	(byte-compile-log-1): Don't call (byte-goto-log-buffer).
	Use with-current-buffer.
	(byte-goto-log-buffer): Delete.
	(byte-compile-log-file): Call compilation-forget-errors.

2004-05-19  Takaaki Ota  <Takaaki.Ota@am.sony.com>  (tiny change)

	* net/ldap.el (ldap-search-internal): Avoid mixing standard error
	output messages into the search result.

2004-05-19  Masatake YAMATO  <jet@gyve.org>

	* wid-edit.el (widget-radio-button-notify): Revert my last
	change. Reported by Katsumi Yamaoka <yamaoka@jpl.org>.

2004-05-19  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Fix syntax (open/close) of CJK chars.
